Opened 6 months ago
Closed 5 months ago
#18968 closed bug (fixed)
Mail: Quote colors have bad contrast in dark mode
Reported by: | nephele | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta6 |
Component: | Applications/Mail | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #18970 | |
Platform: | All |
Description (last modified by )
Currently the colors are still hardcoded. I de-hardcoded some other colors before but left the quote colors before.
This can likely be fixed in a similar fashion to AboutSystem
Change History (3)
comment:1 by , 6 months ago
Description: | modified (diff) |
---|
comment:2 by , 6 months ago
Blocking: | 18970 added |
---|
comment:3 by , 5 months ago
Milestone: | Unscheduled → R1/beta6 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev58099