Mail: Use mix_color to make quote colors readable in dark mode

Fixes #18968

Change-Id: Ic8a63820ef004fbc0d98a80f4dccde2b90d1fa1a
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7951
Reviewed-by: nephele nephele <nep-git@packageloss.eu>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>